--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script>window.onerror=function(m,s,l){document.getElementById('root').innerHTML='<pre style="color:red;padding:20px">'+m+'\n'+s+':'+l+'</pre>'}</script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
