Code-split bundle, add meta/OG tags, clean up unused files
- Lazy-load all pages with React.lazy + Suspense (initial load ~86KB vs 1.9MB)
- Split vendor chunks: react, solana, anchor
- Add OG/Twitter card meta tags and SVG favicon
- Remove unused Layout.tsx, framer-motion dependency
- Update .gitignore with node_modules, dist, build, target, artifacts

--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blind-Link — Private Contact Discovery</title>
+    <meta name="description" content="Find your contacts privately. Zero data sharing. Powered by cryptographic proofs on Arcium and Solana." />
+    <meta name="theme-color" content="#5e60ce" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Blind-Link — Private Contact Discovery" />
+    <meta property="og:description" content="Find your contacts privately. Zero data sharing. Powered by cryptographic proofs, not promises." />
+    <meta property="og:image" content="/og-image.png" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Blind-Link — Private Contact Discovery" />
+    <meta name="twitter:description" content="Find your contacts privately. Zero data sharing. Powered by cryptographic proofs, not promises." />
+    <meta name="twitter:image" content="/og-image.png" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
   <body>
     <div id="root"></div>
