Add OG image and update README for new UI
- Create SVG OG image with privacy flow diagram and feature pills
- Update meta tags to reference og-image.svg
- Rewrite README: add live demo link, features section, privacy guarantees
  table, tech stack table, updated architecture docs reflecting new UI
- Remove hackathon judging section, streamline for public consumption

--- a/app/index.html
+++ b/app/index.html
@@ -11,13 +11,13 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Blind-Link — Private Contact Discovery" />
     <meta property="og:description" content="Find your contacts privately. Zero data sharing. Powered by cryptographic proofs, not promises." />
-    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:image" content="/og-image.svg" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Blind-Link — Private Contact Discovery" />
     <meta name="twitter:description" content="Find your contacts privately. Zero data sharing. Powered by cryptographic proofs, not promises." />
-    <meta name="twitter:image" content="/og-image.png" />
+    <meta name="twitter:image" content="/og-image.svg" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
